Tweaking CSS to avoid overlapping elements

--- a/css/valor.css
+++ b/css/valor.css
@@ -291,7 +291,7 @@
   overflow: hidden;
 }
 
-.valor.sheet-header.header-fields {
+.valor .sheet-header .header-fields {
   -webkit-box-flex: 1;
   -ms-flex: 1;
   flex: 1;
@@ -497,7 +497,7 @@
 
 .valor .titlebox {
   position: relative;
-  width: calc(100% - 50px);
+  width: 95%;
   height: 50px;
   background-color: white;
   border-radius: 2px 0px 2px 0px;
@@ -537,7 +537,7 @@
 
 .valor .sheet-header .titlebox input {
   position: relative;
-  width: calc(100% - 255px);
+  width: auto;
   border:none;
   background: none;
   font-size: 15px;
@@ -548,7 +548,7 @@
 
 .valor .titlebox .titlebox-right {
   position: absolute;
-  left: calc(100% - 250px);
+  left: 55%;
   float: right;
   width: 200px;
   background: none;
@@ -681,6 +681,5 @@
 
 img.item-image,
 .item-image img { background: #ababab; }
-
 
 
